@@ -1,3 +1,4 @@
+* Improve Calysto support.
 * The "revoke" parameter is a crypto command.
 * The driftfile wander threshold is a real number.
 * [Bug 850] Fix the wander threshold parameter on the driftfile command.
